tests/snapshots/run_wpt_conformance__coreml_log_float16_positive_3D_tensor.snap
---
source: tests/run_wpt_conformance.rs
expression: "(&file_name, &test_name, &backend_prefix, \"PASS\")"
---
(
    "log.https.any.js",
    "log float16 positive 3D tensor",
    "coreml",
    "PASS",
)
